# cmake_and_cuda

./: LICENSE  README.md  how_to_enable_CUDA_in_cmake.md
findcuda2/: CMakeLists.txt  initCUDACXX.sh  readme.txt
findcuda3/: CMakeLists.txt  nvcc  readme.txt
findcuda_best/: CMakeLists.txt  readme.txt
